syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message SumRequest {
  int32 first_integer = 1;
  int32 second_integer = 2;
}

message SumResponse {
  int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
  int32 input_integer = 1;
}

message PrimeNumberDecompositionResponse {
  int32 result = 1;
}

message ComputeAverageRequest {
  int32 input_integer = 1;
}

message ComputeAverageResponse {
  double result_average = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}